chore: new cache key

--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -38,8 +38,8 @@ jobs:
       env:
         cache-name: cache-deps
       with:
-        path: ~/deps
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('rockspec/apisix-master-0.rockspec') }}
+        path: deps
+        key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('rockspec/apisix-master-0.rockspec') }}
 
     - name: run apisix
       run: |
