--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -43,13 +43,7 @@ jobs:
         sudo apt-get install -y git openresty curl openresty-openssl111-dev unzip make gcc
         ./utils/linux-install-luarocks.sh
 
-        for (( i = 0; i < 10; i++ )); do
-            if [[ "$i" -eq 10 ]]; then
-                echo "failed to make deps in time"
-                exit 1
-            fi
-            make deps && break
-        done
+        make deps
         make init
         make run
 
