--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -11,7 +11,11 @@ jobs:
   chaos-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+
       - name: setup go
         uses: actions/setup-go@v2.1.3
         with:
