--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
+          persist-credentials: false
           submodules: recursive
 
       - name: setup go
