--- a/.github/workflows/centos7-ci.yml
+++ b/.github/workflows/centos7-ci.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
       with:
+        persist-credentials: false
         submodules: recursive
 
     - name: Extract branch name
