--- a/.github/workflows/fuzzing-ci.yaml
+++ b/.github/workflows/fuzzing-ci.yaml
@@ -31,6 +31,7 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
       with:
+        persist-credentials: false
         submodules: recursive
 
     - name: Cache deps
