--- a/.github/workflows/code-lint.yml
+++ b/.github/workflows/code-lint.yml
@@ -18,7 +18,7 @@ jobs:
         export OPENRESTY_VERSION=default
 
         ./utils/linux-install-openresty.sh
-        ./utils/linux-install-luarocks.sh
+        sudo ./utils/linux-install-luarocks.sh
         luarocks install luacheck
 
     - name: Script
