ci: use travis CI for ARM test
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ t/lib/dubbo-backend/dubbo-backend-provider/target/
 ci/openwhisk-utilities/
 !.gitmodules
 !.markdownlint.yml
+!.travis.yml
 !.yamllint
 /conf/apisix.yaml
 /conf/apisix-*.yaml
