--- a/ci/ASF-Release.cfg
+++ b/ci/ASF-Release.cfg
@@ -89,6 +89,7 @@ t/servroot
 t/lib/dubbo-backend/dubbo-backend-provider/target
 t/lib/dubbo-backend/dubbo-backend-interface/target
 html
+.travis.yml
 
 conf
 ci/openwhisk-utilities
