fix travis format
Signed-off-by: yiyiyimu <wosoyoung@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,10 @@
 dist: bionic
 sudo: required
 
-matrix:
-  include:
-    - os: linux
-      arch: arm64-graviton2
-      services:
-        - docker
+os: linux
+arch: arm64-graviton2
+services:
+  - docker
 
 language: c
 
