--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -130,7 +130,7 @@ apisix:
   disable_sync_configuration_during_start: false  # safe exit. Remove this once the feature is stable
 
 nginx_config:                     # config for render the template to generate nginx.conf
-  #user: "root"                   # specifies the execution user of worker process.
+  #user: "root"                   # specifies the execution user of the worker process.
                                   # the "user" directive makes sense only if the master process runs with super-user privileges.
                                   # if you're not root user,the default is current user.
   error_log: "logs/error.log"
