Add access_log config item to config.yaml

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -131,12 +131,11 @@ apisix:
   disable_sync_configuration_during_start: false  # safe exit. Remove this once the feature is stable
 
 nginx_config:                     # config for render the template to generate nginx.conf
-  #user: "root"                   # specifies the execution user of the worker process.
-                                  # the "user" directive makes sense only if the master process runs with super-user privileges.
-                                  # if you're not root user,the default is current user.
   error_log: "logs/error.log"
   error_log_level: "warn"         # warn,error
-  worker_processes: auto          # if you want use multiple cores in container, you can inject the number of cpu as environment variable "APISIX_WORKER_PROCESSES"
+  worker_processes: auto          # one worker will get best performance, you can use "auto", but remember it is just work well only on physical machine
+                                  # no more than 8 workers, otherwise competition between workers will consume a lot of resources
+                                  # if you want use multiple cores in container, you can inject the number of cpu as environment variable "APISIX_WORKER_PROCESSES"
   enable_cpu_affinity: true       # enable cpu affinity, this is just work well only on physical machine
   worker_rlimit_nofile: 20480     # the number of files a worker process can open, should be larger than worker_connections
   worker_shutdown_timeout: 240s   # timeout for a graceful shutdown of worker processes
@@ -171,24 +170,24 @@ nginx_config:                     # config for render the template to generate n
     enable_access_log: true        # enable access log or not, default true
     access_log:
       -
-        log_type: "local"          # local disk log storage
+        log_type: "local"               # local disk log storage
         log_format: "$remote_addr - $remote_user [$time_local] $http_host \"$request\" $status $body_bytes_sent $request_time \"$http_referer\" \"$http_user_agent\" $upstream_addr $upstream_status $upstream_response_time \"$upstream_scheme://$upstream_host$upstream_uri\""
         log_format_name: "main_local"
         log_format_escape: "default"    # allows setting json or default characters escaping in variables
         log_path: "logs/access.log"     # disk storage path
-        log_buffer: 16384               # the buffer size write to log file, by default, 64K bytes
-        log_flush: 3                    # the expire time of buffer
+        log_buffer: 16384               # the buffer size write to log file
+        log_flush: 3                    # the expire time to flush buffer
       -
-        log_type: "syslog"              # send log to remote syslog server
+        log_type: "syslog"              # send log to remote syslog 
         log_format: "$remote_addr - $remote_user [$time_local] $http_host \"$request\" $status $body_bytes_sent $request_time \"$http_referer\" \"$http_user_agent\" $upstream_addr $upstream_status $upstream_response_time \"$upstream_scheme://$upstream_host$upstream_uri\""
         log_format_name: "main_syslog"
         log_format_escape: "default"    # allows setting json or default characters escaping in variables
-        log_server: "127.0.0.1"         # syslog server
-        log_port: 5000                  # syslog port
-        log_tag: "apisix"               # syslog tag
-        log_nohostname: true
-        log_severity: "info"
-        log_facility: "local7"
+        log_server: "127.0.0.1"         # remote syslog server
+        log_port: 5000                  # remote syslog port
+        log_tag: "apisix"               # remote syslog tag
+        log_nohostname: true            # Disables adding the “hostname” field into the syslog message header
+        log_severity: "info"            # severity of syslog messages
+        log_facility: "local7"          # facility of syslog messages
 
     keepalive_timeout: 60s         # timeout during which a keep-alive client connection will stay open on the server side.
     client_header_timeout: 60s     # timeout for reading client request header, then 408 (Request Time-out) error is returned to the client
@@ -260,7 +259,6 @@ graphql:
   #cmd: ["ls", "-l"]
 
 plugins:                          # plugin list (sorted by priority)
-  - client-control                 # priority: 22000
   - ext-plugin-pre-req             # priority: 12000
   - zipkin                         # priority: 11011
   - request-id                     # priority: 11010
