--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -104,6 +104,8 @@ apisix:
   #  udp:                         # UDP proxy port list
   #    - 9200
   #    - "127.0.0.1:9201"
+  #  lua_shared_dict:
+  #    lrucache_lock_stream: 10m
   #dns_resolver:                  # If not set, read from `/etc/resolv.conf`
   #  - 1.1.1.1
   #  - 8.8.8.8
@@ -201,6 +203,27 @@ nginx_config:                     # config for render the template to generate n
     charset: utf-8                 # Adds the specified charset to the "Content-Type" response header field, see
                                    # http://nginx.org/en/docs/http/ngx_http_charset_module.html#charset
     variables_hash_max_size: 2048  # Sets the maximum size of the variables hash table.
+
+    lua_shared_dict:
+      internal_status: 10m
+      plugin_limit_req: 10m
+      plugin_limit_count: 10m
+      prometheus_metrics: 10m
+      plugin_limit_conn: 10m
+      upstream_healthcheck: 10m
+      worker_events: 10m
+      lrucache_lock: 10m
+      balancer_ewma: 10m
+      balancer_ewma_locks: 10m
+      balancer_ewma_last_touched_at: 10m
+      plugin_limit_count_redis_cluster_slot_lock: 1m
+      tracing_buffer: 10m
+      plugin_api_breaker: 10m
+      etcd_cluster_health_check: 10m
+      discovery: 1m
+      jwks: 1m
+      introspection: 10m
+      access_tokens: 1m
 
 etcd:
   host:                           # it's possible to define multiple etcd hosts addresses of the same etcd cluster.
