--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -98,7 +98,7 @@ apisix:
     ssl: 'radixtree_sni'          # radixtree_sni: match route by SNI(base on radixtree)
   stream:
     lua_shared_dict:
-      lrucache_lock_stream: 10m
+      lrucache-lock-stream: 10m
   #stream_proxy:                  # TCP/UDP proxy
   #  tcp:                         # TCP proxy port list
   #    - addr: 9100
@@ -206,25 +206,25 @@ nginx_config:                     # config for render the template to generate n
     variables_hash_max_size: 2048  # Sets the maximum size of the variables hash table.
 
     lua_shared_dict:
-      internal_status: 10m
-      plugin_limit_req: 10m
-      plugin_limit_count: 10m
-      prometheus_metrics: 10m
-      plugin_limit_conn: 10m
-      upstream_healthcheck: 10m
-      worker_events: 10m
-      lrucache_lock: 10m
-      balancer_ewma: 10m
-      balancer_ewma_locks: 10m
-      balancer_ewma_last_touched_at: 10m
-      plugin_limit_count_redis_cluster_slot_lock: 1m
-      tracing_buffer: 10m
-      plugin_api_breaker: 10m
-      etcd_cluster_health_check: 10m
+      internal-status: 10m
+      plugin-limit-req: 10m
+      plugin-limit-count: 10m
+      prometheus-metrics: 10m
+      plugin-limit-conn: 10m
+      upstream-healthcheck: 10m
+      worker-events: 10m
+      lrucache-lock: 10m
+      balancer-ewma: 10m
+      balancer-ewma-locks: 10m
+      balancer-ewma-last-touched-at: 10m
+      plugin-limit-count-redis-cluster-slot-lock: 1m
+      tracing-buffer: 10m
+      plugin-api-breaker: 10m
+      etcd-cluster-health-check: 10m
       discovery: 1m
       jwks: 1m
       introspection: 10m
-      access_tokens: 1m
+      access-tokens: 1m
 
 etcd:
   host:                           # it's possible to define multiple etcd hosts addresses of the same etcd cluster.
