--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -218,7 +218,7 @@ nginx_config:                     # config for render the template to generate n
       balancer-ewma-locks: 10m
       balancer-ewma-last-touched-at: 10m
       plugin-limit-count-redis-cluster-slot-lock: 1m
-      tracing-buffer: 10m
+      tracing_buffer: 10m
       plugin-api-breaker: 10m
       etcd-cluster-health-check: 10m
       discovery: 1m
