--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -318,7 +318,7 @@ plugin_attr:
     upstream_multiplex_count: 32
   request-id:
     snowflake:
-      enable: true
+      enable: false
       snowflake_epoc: 1609459200000
       node_id_bits: 5
       sequence_bits: 5
