feat: support timestamp delta offset configuration

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -319,9 +319,10 @@ plugin_attr:
   request-id:
     snowflake:
       enable: false
-      snowflake_epoc: 1609459200000
-      node_id_bits: 5
-      datacenter_id_bits: 5
-      sequence_bits: 10
-      worker_number_ttl: 30
-      worker_number_interval: 10
+      snowflake_epoc: 1609459200000   # the starting timestamp is expressed in milliseconds
+      data_machine_bits: 12           # data machine bit
+      sequence_bits: 10               # each machine generates a maximum of (1 << sequence_bits) serial numbers per millisecond
+      delta_offset: 1                 # timestamp delta offset (unit: milliseconds)
+      worker_number_ttl: 30           # live time for worker number in etcd (unit: second)
+      worker_number_interval: 10      # lease renewal interval in etcd (unit: second)
+
