--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -320,7 +320,7 @@ plugin_attr:
     snowflake:
       enable: false
       snowflake_epoc: 1609459200000   # the starting timestamp is expressed in milliseconds
-      data_machine_bits: 12           # data machine bit
+      data_machine_bits: 12           # data machine bit, maximum 31, because Lua cannot do bit operations greater than 31
       sequence_bits: 10               # each machine generates a maximum of (1 << sequence_bits) serial numbers per millisecond
       delta_offset: 1                 # timestamp delta offset (unit: milliseconds)
       data_machine_ttl: 30            # live time for data_machine in etcd (unit: second)
