--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -72,3 +72,10 @@ jobs:
       - name: Run test
         working-directory: ./t/chaos
         run: ginkgo -r --v --progress --trace
+
+      # Debug via SSH if previous steps failed
+      - name: Set up tmate session
+        if: ${{ failure() }}
+        uses: ./.github/actions/action-tmate
+        with:
+          timeout-minutes: 15
