--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -148,6 +148,7 @@ nginx_config:                     # config for render the template to generate n
 
   stream:
     lua_shared_dict:
+      etcd-cluster-health-check-stream: 10m
       lrucache-lock-stream: 10m
       plugin-limit-conn-stream: 10m
 
@@ -279,6 +280,7 @@ plugins:                          # plugin list (sorted by priority)
   - batch-requests                 # priority: 4010
   - cors                           # priority: 4000
   - ip-restriction                 # priority: 3000
+  - ua-restriction                 # priority: 2999
   - referer-restriction            # priority: 2990
   - uri-blocker                    # priority: 2900
   - request-validation             # priority: 2800
@@ -290,6 +292,7 @@ plugins:                          # plugin list (sorted by priority)
   - key-auth                       # priority: 2500
   - consumer-restriction           # priority: 2400
   - authz-keycloak                 # priority: 2000
+  - ext-auth                       # priority: 1555
   #- error-log-logger              # priority: 1091
   - proxy-mirror                   # priority: 1010
   - proxy-cache                    # priority: 1009
@@ -321,6 +324,7 @@ plugins:                          # plugin list (sorted by priority)
   - ext-plugin-post-req            # priority: -3000
 
 stream_plugins: # sorted by priority
+  - ip-restriction                 # priority: 3000
   - limit-conn                     # priority: 1003
   - mqtt-proxy                     # priority: 1000
   # <- recommend to use priority (0, 100) for your custom plugins
