--- a/.github/workflows/chaos.yml
+++ b/.github/workflows/chaos.yml
@@ -80,10 +80,10 @@ jobs:
 
       - name: Run test
         working-directory: ./t/chaos
-        run: ginkgo -r --v --progress --trace
+        run: ginkgo -r --v --progress --trace --failFast
 
       # Debug via SSH if previous steps failed
       - name: Set up tmate session
         if: ${{ failure() }}
         uses: ./.github/actions/action-tmate
-        timeout-minutes: 15
+        timeout-minutes: 30
