--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -115,8 +115,14 @@ apisix:
   enable_resolv_search_opt: true  # enable search option in resolv.conf
   ssl:
     enable: true
-    enable_http2: true
-    listen_port: 9443
+    listen:
+    - 9443
+    - ip: 127.0.0.3               # Specific IP, If not set, the default value is `0.0.0.0`.
+      port: 9444
+      enable_http2: true          # If not set, the default value is `false`.
+    #port: 9081
+    #enable_http2: true
+    #listen_port: 9443
     #ssl_trusted_certificate: /path/to/ca-cert  # Specifies a file path with trusted CA certificates in the PEM format
                                                 # used to verify the certificate when APISIX needs to do SSL/TLS handshaking
                                                 # with external services (e.g. etcd)
