--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -128,7 +128,7 @@ apisix:
     #   - ip: 127.0.0.3           # Specific IP, If not set, the default value is `0.0.0.0`.
     #     port: 9445
     #     enable_http2: true
-    enable_http2: true            # Not recommend: This parameter should be set via the `listen`. It is only used for `listen_port`.
+    enable_http2: true            # Not recommend: This parameter should be set via the `listen`.
     # listen_port: 9443           # Not recommend: This parameter should be set via the `listen`.
     #ssl_trusted_certificate: /path/to/ca-cert  # Specifies a file path with trusted CA certificates in the PEM format
                                                 # used to verify the certificate when APISIX needs to do SSL/TLS handshaking
