--- a/.gitignore
+++ b/.gitignore
@@ -65,12 +65,12 @@ t/lib/dubbo-backend/dubbo-backend-provider/target/
 !.markdownlint.yml
 !.yamllint
 !.licenserc.yaml
-/conf/apisix.yaml
-/conf/apisix-*.yaml
-/conf/config-*.yaml
-!/conf/config-default.yaml
-/conf/debug-*.yaml
-/build-cache/
+conf/apisix.yaml
+conf/apisix-*.yaml
+conf/config-*.yaml
+!conf/config-default.yaml
+conf/debug-*.yaml
+build-cache/
 t/fuzzing/__pycache__/
 boofuzz-results/
 *.pyc
