--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -461,6 +461,7 @@ plugins:                          # plugin list (sorted by priority)
   - file-logger                    # priority: 399
   - clickhouse-logger              # priority: 398
   - tencent-cloud-cls              # priority: 397
+  - inspect                        # priority: 200
   #- log-rotate                    # priority: 100
   # <- recommend to use priority (0, 100) for your custom plugins
   - example-plugin                 # priority: 0
@@ -555,6 +556,9 @@ plugin_attr:
       send: 60s
 #  redirect:
 #    https_port: 8443   # the default port for use by HTTP redirects to HTTPS
+  inspect:
+    delay: 3
+    hooks_file: "/var/run/apisix_inspect_hooks.lua"
 
 deployment:
   role: traditional
