--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -102,7 +102,8 @@
             "plugins/referer-restriction",
             "plugins/consumer-restriction",
             "plugins/csrf",
-            "plugins/public-api"
+            "plugins/public-api",
+            "plugins/gm"
           ]
         },
         {
