docs: update consumer-group/router/service/script doc (#8332)
Co-authored-by: Sylvia <39793568+SylviaBABY@users.noreply.github.com>

--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -29,6 +29,7 @@
       "items": [
         "terminology/api-gateway",
         "terminology/consumer",
+        "terminology/consumer-group",
         "terminology/global-rule",
         "terminology/plugin",
         "terminology/plugin-config",
