--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -123,10 +123,10 @@ apisix:
   #  ip: 127.0.0.1
   #  port: 9090
   disable_sync_configuration_during_start: false  # safe exit. Remove this once the feature is stable
-  data_encryption:                # use `encrypted = {fields}` in plugin schema to enable encryption
+  data_encryption:                # add `encrypted = true` in plugin schema to enable encryption
     enable: false                 # if not set, the default value is `false`.
     keyring:
-      - edd1c9f0985e76a2          # If not set, will save origin value into etcd.
+      - qeddd145sfvddff3          # If not set, will save origin value into etcd.
                                   # If set this, the keyring should be an array whose elements are string, and the size is also 16, and it will encrypt fields with AES-128-CBC
                                   # !!! So do not change it after encryption, it can't decrypt the fields have be saved if you change !!
                                   # Only use the first key to encrypt, and decrypt in the order of the array.
