Add new tutorial manage api consumers

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -20,6 +20,7 @@
         "tutorials/expose-api",
         "tutorials/protect-api",
         "tutorials/observe-your-api",
+        "tutorials/manage-api-consumers",
         "tutorials/cache-api-responses",
         "tutorials/health-check"
       ]
