feat: fix code review

--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -242,6 +242,8 @@
           "items": [
             "discovery",
             "discovery/dns",
+            "discovery/consul",
+            "discovery/consul_kv",
             "discovery/nacos",
             "discovery/eureka",
             "discovery/control-plane-service-discovery",
