--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -57,7 +57,8 @@
             "plugins/server-info",
             "plugins/ext-plugin-pre-req",
             "plugins/ext-plugin-post-req",
-            "plugins/ext-plugin-post-resp"
+            "plugins/ext-plugin-post-resp",
+            "plugins/inspect"
           ]
         },
         {
