change: rename kms to secret

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -39,7 +39,7 @@
         "terminology/script",
         "terminology/service",
         "terminology/upstream",
-        "terminology/kms"
+        "terminology/secret"
       ]
     },
     {
