--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -38,7 +38,7 @@
         "terminology/script",
         "terminology/service",
         "terminology/upstream",
-        "terminology/kms"
+        "terminology/secret"
       ]
     },
     {
