fix: update docs

--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -21,7 +21,7 @@
         "tutorials/protect-api",
         "tutorials/observe-your-api",
         "tutorials/health-check",
-        "tutorials/route-mtls"
+        "tutorials/client-to-apisix-mtls"
       ]
     },
     {
