docs: added tutorial on how to configure mTLS between the client and APISIX (#8440)

--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -20,7 +20,8 @@
         "tutorials/expose-api",
         "tutorials/protect-api",
         "tutorials/observe-your-api",
-        "tutorials/health-check"
+        "tutorials/health-check",
+        "tutorials/client-to-apisix-mtls"
       ]
     },
     {
