change: rename kms to secret (#8448)
Co-authored-by: soulbird <zhaothree@gmail.com>

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -40,7 +40,7 @@
         "terminology/script",
         "terminology/service",
         "terminology/upstream",
-        "terminology/kms"
+        "terminology/secret"
       ]
     },
     {
