feat: add consul discovery module (#8380)

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -267,6 +267,7 @@
           "items": [
             "discovery",
             "discovery/dns",
+            "discovery/consul",
             "discovery/consul_kv",
             "discovery/nacos",
             "discovery/eureka",
