--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -123,7 +123,7 @@ apisix:
   #  ip: 127.0.0.1
   #  port: 9090
   disable_sync_configuration_during_start: false  # safe exit. Remove this once the feature is stable
-  data_encryption:                # add `encrypted = true` in plugin schema to enable encryption
+  data_encryption:                # add `encrypt_fields = { $field },` in plugin schema to enable encryption
     enable: false                 # if not set, the default value is `false`.
     keyring:
       - qeddd145sfvddff3          # If not set, will save origin value into etcd.
