--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -22,6 +22,7 @@
         "tutorials/observe-your-api",
         "tutorials/manage-api-consumers",
         "tutorials/cache-api-responses",
+        "tutorials/add-multiple-api-versions",
         "tutorials/health-check",
         "tutorials/client-to-apisix-mtls"
       ]
